--- a/home.css
+++ b/home.css
@@ -1,33 +1,89 @@
 
-#main_heading{
-  position: fixed;
-  left: 0; top: -10pt;
-  width: 100%;
-  font-family: Courier New;
-  font-size: 40pt;
-  font-weight: bolder;
-  color: #1A1329;
-  text-align: center;
+body{
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+  background: #F7FBAF;
 }
-#footer {
-  position: fixed;
+
+@font-face {
+  font-family: Roboto-Black;
+  src: url('fonts/Roboto-Black.ttf');
+  font-family: Roboto-MediumItalic;
+  src: url('fonts/Roboto-MediumItalic.ttf');
+}
+body{min-height:100vh}
+.row:after {
+  visibility: hidden;
+  display: block;
+  font-size: 0;
+  content: " ";
+  clear: both;
+  height: 0;
+}
+.row { display: inline-block; }
+/* start commented backslash hack \*/
+* html .clearfix { height: 1%; }
+.row { display: block; }
+/* close commented backslash hack */
+
+.header{
+    background: #29684B;
+}
+.inner-header{
+  height: 80px;
+  width: 100vw;
+  font-family: Roboto-Black;
+  font-size: 50pt;
+  font-weight: bolder;
+  text-align: center;
+  text-shadow: 1px 1px 2px black, 0 0 1em white;
+  color: #00FF40;
+}
+
+.content{
+     float: right;
+}
+.inner-content{
+  background: #F7FBAF ;
+  min-height: 96vh;
+  width: calc(100vw - 320px);
+  padding: 10px;
+}
+.sidebar{
+  width: 300px;
+  float: left;
+}
+.inner-sidebar{
+  background: #9BBD88;
+  font-family: Roboto-Black;
+  font-size: 30pt;
+  font-weight: bolder;
+  color: #F4FA58;
+  text-shadow: 1px 1px 2px black, 0 0 1em white;
+  text-align: center;
+  padding: 10px;
+  border-radius: 5px
+}
+.inner-sidebar-list{
+  font-size: 20pt;
+  text-align: left;
+}
+#inner-sidebar-list_in_list_1{
+  font-size: 15pt;
+}
+#inner-sidebar-list_in_list_2{
+  font-size: 10pt;
+}
+.footer{
+  background: #29684B;
+  min-height: 2vh;
+}
+.inner-footer{
   font-family: Courier New;
-  right: 20pt; bottom: 10pt;
+  text-align: right;
   font-weight: bolder;
   font-size: 15pt;
   color: #3B3A3D;
- }
- .toper{
-   position: fixed;
-   left: 0; top: 0;
-   background-color: #6E6C78;
-   width: 100%;
-   height: 80pt;
- }
- .background-footer{
-   position: fixed;
-   right: 0; bottom: 0;
-   height: 40pt;
-   background: #6E6C78;
-   width: 100%;
- }
+}
